Replace deprecated code
Replace 'new Locale' with Locale.of